# autoFRK-python

./: .gitignore  NOTICE  README.md  __init__.py  helper.py  pyproject.toml  test_cMLE.ipynb
autoFRK/: MANIFEST.in  pyproject.toml  setup.py
autoFRK-master/R/: estimator.R  helper.R
autoFRK/original R package/: NAMESPACE
autoFRK/original R package/R/: helper.R
autoFRK/original R package/man/: DIST.Rd  autoFRK.Rd  predict.mrts.Rd
autoFRK/src/: autoFRK.py
autoFRK/src/autoFRK/: __init__.py  autoFRK.py  mrts.py
autoFRK/src/autoFRK.egg-info/: SOURCES.txt
autoFRK/src/autoFRK/utils/: device.py  predictor.py  utils.py
autoFRK/test/: .RData  .Rhistory  tset.Rmd  tset.nb.html
flowcharts/: autoFRK.drawio
mrts/: mrts.py
mrts/src/: lanczos_algorithm.cpp
note/: note1.md
original R package/man/: predict.FRK.Rd
src/autoFRK/: __init__.py  autoFRK.py  mrts.py  mrts_beta.py
src/autoFRK.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/autoFRK/utils/: LK_object.py  (+8 more)
test/: .gitignore  BBBH_output.csv  FUNCTION_INDEX.md  F_output.csv  UZ_output.csv  basisCheck.py  basisFuncCheck.Rmd  loc.csv  test autoFRK.R  test autoFRK.Rmd  test autoFRK.ipynb  test on sphere.ipynb  test on sphere.rmd  test_code.R  tools.py  work.md
test/mrts source code/: mrts_autoFRK_python_old_version.py
test/note/: gpt_cMLEimat.md  note1.md
test/spherical mrts source code/: fn_cpp.R
test/test autoFRK/: test autoFRK.Rmd  test autoFRK.ipynb  test on sphere.ipynb  test on sphere.nb.html  test on sphere.rmd
test_to_plot_basis/: test_to_plot_basis.Rmd  test_to_plot_basis.nb.html
(+35 files in other folders)
